config/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oyalmli
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oyalmli
  template:
    metadata:
      name: oyalmli
      labels:
        k8s-app: oyalmli
    spec:
      containers:
        - name: oyalmli
          image: <IMAGE>
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
  minReadySeconds: 5
