config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oyalmli-service
  namespace: apps
  labels:
    k8s-app: oyalmli
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http-web-svc
  selector:
    k8s-app: oyalmli
