config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oyalmli-deployment
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      name: oyalmli
  template:
    metadata:
      labels:
        name: oyalmli
    spec:
      containers:
      - name: oyalmli
        image: registry.digitalocean.com/olsen/oyalmli
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oyalmli-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /oyalmli
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: oyalmli-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
