config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oyalmli-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: oyalmli-example
  rules:
  - host: "app.motoren.site"
    http:
      paths:
      - pathType: Prefix
        path: "/oyalmli"
        backend:
          service:
            name: oyalmli
            port:
              number: 80
